--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: white;
+    background-color: black;
 }
 
 .container {
@@ -58,6 +58,10 @@ body {
 .menu ul li a.active, .menu ul li a:hover {
     background-color: #9f98bf;
     color: white;
+}
+
+.listerEleve {
+    margin-left: 50px; 
 }
 
 .badge {
