--- a/templates/cours/lister.html.twig
+++ b/templates/cours/lister.html.twig
@@ -9,7 +9,7 @@
     <div class="container">
         <aside class="sidebar">
             <div class="brand">
-                <img src="../image/logo.png" alt="ProDeal" class="logo">
+                <img src="../image/ertret.png" alt="ProDeal" class="logo">
             </div>
             <nav class="menu">
                 <ul>
@@ -80,6 +80,7 @@
                 <tr><td>type cours : </td><td id="modal-typeCours"></td></tr>
                 <tr><td>type instrument : </td><td id="modal-typeInstrument"></td></tr>
             </table>
+    <img style="height:500px;" src="/instrument/ertret.png">
         </div>
     </div>
 
