--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -55,7 +55,6 @@
                 const prixAchat = this.getAttribute("data-prixAchat");
                 const utilisation = this.getAttribute("data-utilisation");
                 const couleur = this.getAttribute("data-couleur");
-                const image = this.getAttribute("data-image");
                 const typeInstrument = this.getAttribute("data-typeInstrument");
                 const interventions = JSON.parse(this.getAttribute("data-interventions"));
 
@@ -65,7 +64,10 @@
                 document.getElementById("modal-utilisation").innerText = utilisation;
                 document.getElementById("modal-couleur").innerText = couleur;
                 document.getElementById("modal-typeInstrument").innerText = typeInstrument;
-                document.getElementById("modal-image").src = image;
+
+            
+             const modifierButton = document.getElementById("modal-modifier-button");
+                modifierButton.setAttribute("href", "{{ path('instrumentModifier', { 'id': '__ID__' }) }}".replace('__ID__', instrumentId));
 
                 const interventionsContainer = document.getElementById("interventionsList");
                 interventionsContainer.innerHTML = '';  
@@ -134,6 +136,7 @@
             
         body{
             background-color: #0A0D14;
+            font-family: sans-serif;
         }
         .tabs {
             display: flex;
